# cad-preprocess

./: .gitignore  LICENSE  README.md  build-deb.sh  build_deb.sh  config.example.yaml  index.html  install.sh  pyproject.toml  uninstall.sh
debian/: changelog  control  copyright  rules
docs/: changelog.html  contributing.html  examples.html  installation.html  quickstart.html
docs/api/: api.html  cli.html  config.html  index.html  input_handler.html  integration.html  logging_utils.html  metadata_extractor.html  output_writer.html  preprocessing_engine.html
docs/css/: style.css
docs/guides/: cli.html  configuration.html  metadata-profiles.html  preprocessing.html  python-api.html
src/cad_preprocess/: __init__.py  api.py  cli.py  config.py  explorer.py  input_handler.py  integration.py  logging_utils.py  metadata_extractor.py  output_writer.py  preprocessing_engine.py
tests/: __init__.py  test_api.py  test_cli.py  test_config.py  test_input_handler.py  test_integration.py  test_logging_utils.py  test_metadata_extractor.py  test_output_writer.py  test_preprocessing_engine.py
