[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cad-preprocess"
version = "0.1.0"
description = "A Python library for DICOM preprocessing in CAD (Computer-Aided Detection/Diagnosis) systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CAD Preprocess Team"}
]
keywords = ["dicom", "medical-imaging", "preprocessing", "cad", "radiology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "pydicom>=2.3.0",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "pyyaml>=6.0",
    "scikit-image>=0.19.0",
    "pylibjpeg>=2.0.0",
    "pylibjpeg-libjpeg>=2.1.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.4.0",
]
explorer = [
    "PyQt6>=6.4.0",
    "pandas>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cad-preprocess = "cad_preprocess.cli:main"
cad-preprocess-explorer = "cad_preprocess.explorer:main"

[project.urls]
Homepage = "https://github.com/cad-preprocess/cad-preprocess"
Documentation = "https://github.com/cad-preprocess/cad-preprocess#readme"
Repository = "https://github.com/cad-preprocess/cad-preprocess"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
